--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 				<div class="col-lg-8 col-md-9">
 					<nav class="main-menu">
 						<ul>
-							<li><a href="home.html">home</a></li>
+							<li><a href="index.html">home</a></li>
 							<li><a href="about.html">about</a></li>
 							<li><a href="home-2.html">interests</a></li>
 							<li><a href="contact.html">contact</a></li>
