--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						  <li><a href="home.html"><img src="img/flower.png" width=100 height=100 rel="shortcut icon"/></a></li>
+						  <li><a href="index.html"><img src="img/flower.png" width=100 height=100 rel="shortcut icon"/></a></li>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
 					<nav class="main-menu">
 						<ul>
-							<li><a href="home.html">home</a></li>
+							<li><a href="index.html">home</a></li>
 							<li><a href="about.html">about</a></li>
 							<li><a href="portfolio.html">portfolio</a></li>
 							<li><a href="contact.html">contact</a></li>
