--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title-2">i like <span>asking questions</span> to see how your brain works and i like to <span>design creative solutions</span> to solve problems, </h2>
+					<h2 class="section-title-2">i like <span>asking questions</span> to see how your brain works and i would like to <span>design creative solutions</span> to solve problems, </h2>
 				</div>
 			</div>
 		</div>
