--- a/portfolio.html
+++ b/portfolio.html
@@ -74,10 +74,9 @@
                             <li class="control" data-filter=".digital"><a href="art.html">digital art</a></li>
                               <li class ="control" data-filter=".photo">
                                 <a href="photo.html">photos</a></li>
-                            <li class="control" data-filter=".video">video</li>
-                            <li class="control"><a href="https://somethoughtsabouttheworld.wordpress.com">
-                                write</a></li>
-                            <li class="control" data-filter=".web">web design</li>
+                            <li class="control" data-filter=".video"><a href="video.html">video</a></li>
+                            <li class="control"><a href="https://somethoughtsabouttheworld.wordpress.com">write</a></li>
+                            <li class="control" data-filter=".web"><a href="web.html">web design</a></li>
 						</ul>
 					</div>
 				</div>
@@ -104,13 +103,13 @@
 					</div>
 				</div>
 				<div class="mix col-md-6 col-lg-4 video">
-					<a href="img/portfolio/11-1.png" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/11-1.png">
+					<a href="video.html" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/11-1.png">
 						<div class="pi-inner">
 							<h2>+ See Videos</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>Videos</h2>
+                        <a href="video.html"><h2>Videos</h2></a>
 						<p>capturing experiences through movement</p>
 					</div>
 				</div>
@@ -126,14 +125,14 @@
 					</div>
 				</div>
 				<div class="mix col-md-6 col-lg-4 web">
-					<a href="img/portfolio/13.png" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/13.png">
+					<a href="web.html" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/13.png">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>Web Design</h2>
-						<p>project for a start-up</p>
+                        <a href="web.html"><h2>Web Design</h2></a>
+						<p>design project for a start-up</p>
 					</div>
 				</div>
             </div>
