fix everest pic

--- a/photo.html
+++ b/photo.html
@@ -378,7 +378,7 @@
 					</a>
 				</div>
                  <div class="mix col-lg-12 col-md-6 land">
-					<a href="img/portfolio/land/24.JPG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/land/24.jpg">
+					<a href="img/portfolio/land/24.JPG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/land/24.JPG">
 						<div class="pi-inner">
 							<h2>+ enlarge</h2>
 						</div>
