contact pic changed

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 			<div class="row">
 				<div class="col-lg-6 offset-lg-3 contect-tect">
 					<h2>so, let’s chat.</h2>
-                    <img src="img/portfolio/portrait/7.jpg">
+                    <img src="img/chat.jpg">
                     <br><br>
 					<p>I want to learn more about design thinking, how our world can be more circular (particularly using tech), and how to think more efficiently and effectively. I'm also looking for new opportunities. Would love to hear from you if you have questions, tips, or you're looking for a fresh brain to join your team!</p>
                     <br>
