--- a/portfolio.html
+++ b/portfolio.html
@@ -32,15 +32,16 @@
 	</div>
 
 	<!-- header section start -->
-	<header class="header-section" id="myHeader">
+	<header class="header-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						  <li><a href="home.html"><img src="img/flower.png" width=100 height=100 rel="shortcut icon"/></a></li>
+                        <a href="home.html"><img src="img/flower.png" width=100 height=100 rel="shortcut icon"/></a>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
+                    <img class="header-btn" src="img/flower.png" width=100 height=100/>
 					<nav class="main-menu">
 						<ul>
 							<li><a href="home.html">home</a></li>
@@ -74,15 +75,15 @@
                             <li class="control" data-filter=".digital"><a href="art.html">digital art</a></li>
                               <li class ="control" data-filter=".photo">
                                 <a href="photo.html">photos</a></li>
-                            <li class="control" data-filter=".video">video</li>
-                            <li class="control"><a href="https://somethoughtsabouttheworld.wordpress.com">
-                                write</a></li>
-                            <li class="control" data-filter=".web">web design</li>
+                            <li class="control" data-filter=".video"><a href="video.html">video</a></li>
+                            <li class="control"><a href="write.html">write</a></li>
+                            <li class="control" data-filter=".web"><a href="web.html">web design</a></li>
+                         <li class="control" data-filter=".web"><a href="marketing.html">marketing projects</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="first-item col-md-6 col-lg-12 mix digital p-lg-0">
-					<a href="art.html" class="portfolio-item-1 set-bg " data-setbg="img/portfolio/2.jpg">
+					<a href="art.html" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
 						<div class="pi-inner">
 							<h2>+ See the Grooves</h2>
 						</div>
@@ -93,7 +94,7 @@
 					</div>
 				</div>
 				<div class="second-item mix col-md-6 photo">
-                    <a href="photo.html" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/1.jpg">
+                    <a href="photo.html" class="portfolio-item set-bg" data-setbg="img/portfolio/1.jpg">
 						<div class="pi-inner">
 							<h2>+ See Photos</h2>
                         </div>
@@ -104,36 +105,47 @@
 					</div>
 				</div>
 				<div class="mix col-md-6 col-lg-4 video">
-					<a href="img/portfolio/11-1.png" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/11-1.png">
+					<a href="video.html" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/11-1.png">
 						<div class="pi-inner">
 							<h2>+ See Videos</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>Videos</h2>
+                        <a href="video.html"><h2>Videos</h2></a>
 						<p>capturing experiences through movement</p>
 					</div>
 				</div>
 				<div class="mix col-md-6 col-lg-4 write">
-					<a href="https://somethoughtsabouttheworld.wordpress.com/blog" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/12.png">
+					<a href="write.html" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/12.png">
 						<div class="pi-inner">
                         <h2>+ See Blog</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-                        <a href="https://somethoughtsabouttheworld.wordpress.com/blog"><h2>Writing</h2></a>
+                        <a href="write.html"><h2>Writing</h2></a>
 						<p>stories i’ve heard, imagined, and experienced</p>
 					</div>
 				</div>
 				<div class="mix col-md-6 col-lg-4 web">
-					<a href="img/portfolio/13.png" class="portfolio-item-1 pi-style2 set-bg" data-setbg="img/portfolio/13.png">
+					<a href="web.html" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/13.png">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>Web Design</h2>
-						<p>project for a start-up</p>
+                        <a href="web.html"><h2>Web Design</h2></a>
+						<p>design project for a start-up</p>
+					</div>
+				</div>
+                <div class="mix col-md-6 col-lg-4 web">
+					<a href="marketing.html" class="portfolio-item pi-style2 set-bg" data-setbg="img/marketing.png">
+						<div class="pi-inner">
+							<h2>+ See Project</h2>
+						</div>
+					</a>
+					<div class="portfolio-meta">
+                        <a href="marketing.html"><h2>Marketing Projects</h2></a>
+						<p>school projects for clients</p>
 					</div>
 				</div>
             </div>
@@ -147,7 +159,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-8">
-					<a href="contact.html" class="site-btn btn-line mr-4 mb-2">Get in touch</a>
+					<a href="contact.html" class="site-btn btn-line mr-4 mb-2">Learn More</a>
 				</div>
 				<div class="col-md-4 text-md-right">
 					<div class="social-links">
