--- a/marketing.html
+++ b/marketing.html
@@ -62,7 +62,7 @@
 		<div class="container text-center">
 			<div class="row">
                <div class="col-xl-10 offset-xl-1">
-                    <a href="write.html"><h2 class="section-title text-center">ray's marketing work</h2></a>
+                    <a href="write.html"><h2 class="section-title text-center">ray's marketing projects</h2></a>
 				</div>
                 </div>
              </div>
