new links on art+photo

--- a/art.html
+++ b/art.html
@@ -65,6 +65,7 @@
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
                     <a href="art.html"><h2 class="section-title" align="center">ray's art</h2></a>
+                       <h5>check out my <a href="https://instagram.com/auralehcar/">instagram</a></h5>
 				</div>
 			</div>
 		</div>
@@ -75,8 +76,9 @@
 	<section class="portfolio-section">
 		<div class="container">
 			<ul class="portfolio-filter controls text-center">
-				<li class="control" data-filter=".illustration">illustrations</li>
+            
 				<li class="control" data-filter=".collage">collages</li>
+                <li class="control" data-filter=".illustration">illustrations</li>
 				<li class="control" data-filter=".move">moving colours</li>
 			</ul>
 		</div>
