new art file updated

--- a/art.html
+++ b/art.html
@@ -307,28 +307,28 @@
 					</a>
 				</div>
                  <div class="mix col-lg-10 col-lg-10 center collage">
-					<a href="img/portfolio/collage/20.JPG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/20.jpg">
+					<a href="img/portfolio/collage/20.JPG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/20.JPG">
 						<div class="pi-inner">
 							<h2>+ enlarge</h2>
 						</div>
 					</a>
 				</div>
                 <div class="mix col-lg-10 col-lg-10 center collage">
-					<a href="img/portfolio/collage/22.JPEG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/22.jpeg">
+					<a href="img/portfolio/collage/22.JPEG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/22.JPEG">
 						<div class="pi-inner">
 							<h2>+ enlarge</h2>
 						</div>
 					</a>
 				</div>
                 <div class="mix col-lg-10 col-lg-10 center collage">
-					<a href="img/portfolio/collage/23.JPEG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/23.jpeg">
+					<a href="img/portfolio/collage/23.JPEG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/23.JPEG">
 						<div class="pi-inner">
 							<h2>+ enlarge</h2>
 						</div>
 					</a>
 				</div>
                 <div class="mix col-lg-10 col-lg-10 center collage">
-					<a href="img/portfolio/collage/24.PNG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/24.png">
+					<a href="img/portfolio/collage/24.PNG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/24.PNG">
 						<div class="pi-inner">
 							<h2>+ enlarge</h2>
 						</div>
@@ -343,10 +343,6 @@
                     </div>
                  <div class="mix col-sm-6 col-sm-6 move">
                 <embed src="img/portfolio/move/4.m4v" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/move/4.m4v">
-                     <div class="pi-inner"></div>
-                    </div>
-                <div class="mix col-sm-6 col-sm-6 move">
-                <embed src="img/portfolio/move/3.m4v" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/move/3.m4v">
                      <div class="pi-inner"></div>
                     </div>
                 <div class="mix col-sm-6 col-sm-6 move">
