--- a/art.html
+++ b/art.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="portfolio, website, creative, designer">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/flower.png" rel="shortcut icon"/>
+	<link href="img/flower1.png" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
@@ -37,11 +37,11 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-                        <a href="home.html"><img src="img/flower.png" width=100 height=100 rel="shortcut icon"/></a>
+                        <a href="home.html"><img src="img/flower1.png" width=100 height=100 rel="shortcut icon"/></a>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
-                    <img class="header-btn" src="img/flower.png" width=100 height=100/>
+                    <img class="header-btn" src="img/flower1.png" width=100 height=100/>
 					<nav class="main-menu">
 						<ul>
 							<li><a href="home.html">home</a></li>
@@ -307,7 +307,7 @@
 					</a>
 				</div>
                  <div class="mix col-lg-10 col-lg-10 center collage">
-					<a href="img/portfolio/collage/20.JPG" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/20.JPG">
+					<a href="img/portfolio/collage/20.jpg" class="portfolio-item-1 set-bg" data-setbg="img/portfolio/collage/20.jpg">
 						<div class="pi-inner">
 							<h2>+ enlarge</h2>
 						</div>
