--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="portfolio, website, creative, designer">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/flower.png" rel="shortcut icon"/>
+	<link href="img/flower1.png" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
@@ -37,11 +37,11 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-                        <a href="home.html"><img src="img/flower.png" width=100 height=100 rel="shortcut icon"/></a>
+                        <a href="home.html"><img src="img/flower1.png" width=100 height=100 rel="shortcut icon"/></a>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
-                    <img class="header-btn" src="img/flower.png" width=100 height=100/>
+                    <img class="header-btn" src="img/flower1.png" width=100 height=100/>
 					<nav class="main-menu">
 						<ul>
 							<li><a href="home.html">home</a></li>
@@ -78,6 +78,7 @@
                             <li class="control" data-filter=".video"><a href="video.html">video</a></li>
                             <li class="control"><a href="write.html">write</a></li>
                             <li class="control" data-filter=".web"><a href="web.html">web design</a></li>
+                         <li class="control" data-filter=".web"><a href="marketing.html">marketing projects</a></li>
 						</ul>
 					</div>
 				</div>
@@ -134,6 +135,17 @@
 					<div class="portfolio-meta">
                         <a href="web.html"><h2>Web Design</h2></a>
 						<p>design project for a start-up</p>
+					</div>
+				</div>
+                <div class="mix col-md-6 col-lg-4 web">
+					<a href="marketing.html" class="portfolio-item pi-style2 set-bg" data-setbg="img/marketing.png">
+						<div class="pi-inner">
+							<h2>+ See Project</h2>
+						</div>
+					</a>
+					<div class="portfolio-meta">
+                        <a href="marketing.html"><h2>Marketing Projects</h2></a>
+						<p>school projects for clients</p>
 					</div>
 				</div>
             </div>
