--- a/home.html
+++ b/home.html
@@ -32,18 +32,19 @@
 	</div>
 
 	<!-- header section start -->
-	<header class="header-section" id="myHeader">
+	<header class="header-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-                        <li><a href="index.html"><img src="img/flower1.png" width=100 height=100 rel="shortcut icon"/></a></li>
+                        <a href="home.html"><img src="img/flower1.png" width=100 height=100 rel="shortcut icon"/></a>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
+                    <img class="header-btn" src="img/flower1.png" width=100 height=100/>
 					<nav class="main-menu">
 						<ul>
-							<li><a href="index.html">home</a></li>
+							<li><a href="home.html">home</a></li>
 							<li><a href="about.html">about</a></li>
 							<li><a href="portfolio.html">portfolio</a></li>
 							<li><a href="contact.html">contact</a></li>
