--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-                        <a href="home.html"><img src="img/flower1.png" width=100 height=100 rel="shortcut icon"/></a>
+                        <a href="index.html"><img src="img/flower1.png" width=100 height=100 rel="shortcut icon"/></a>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
